Fixed edge placement and added livemarking